--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,4 +7,6 @@ phases:
   build:
     commands:
       - echo 'hello'
+      - mkdir lambda_deployment_pkg
+      - zip -r lambda_deployment_pkg/deploy_pkg.zip code 
       - aws s3 cp code/ s3://delete-me-please-1234 --recursive --metadata GIT_SHA=$CODEBUILD_SOURCE_VERSION
