--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,6 @@ phases:
     commands:
       - echo 'hello'
       - mkdir lambda_deployment_pkg
-      - cd code
-      - zip lambda_deployment_pkg/hello.zip hello.py
+      - cat code/hello.py
+      - zip lambda_deployment_pkg/hello.zip code/hello.py
       - aws s3 cp lambda_deployment_pkg s3://delete-me-please-1234 --recursive --metadata GIT_SHA=$CODEBUILD_SOURCE_VERSION
