--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,5 +9,5 @@ phases:
       - echo 'hello'
       - mkdir lambda_deployment_pkg
       - cat code/hello.py
-      - zip lambda_deployment_pkg/hello.zip code/hello.py
+      - zip lambda_deployment_pkg/hello.zip code/__init__.py
       - aws s3 cp lambda_deployment_pkg s3://delete-me-please-1234 --recursive --metadata GIT_SHA=$CODEBUILD_SOURCE_VERSION
