--- a/codepipline_demo/Makefile
+++ b/codepipline_demo/Makefile
@@ -6,7 +6,7 @@ deploy-cfn: deploy-cfn-container
 			-v $(shell pwd):/src \
 			deploy-ta-codebuild \
 			aws --region us-east-1 cloudformation create-stack \
-				--template-body file://src/codepipeline_cfn.json \
+				--template-body file://src/<project_path>/deployment/codepipeline_cfn.json \
 				--stack-name my-cfn-code-pipeline \
 				--capabilities CAPABILITY_NAMED_IAM \
 				--tags Key=project,Value=cloudformation_pipeline_demo
@@ -16,7 +16,7 @@ update-cfn: deploy-cfn-container
 			-v $(shell pwd):/src \
 			deploy-ta-codebuild \
 			aws --region us-east-1 cloudformation update-stack \
-				--template-body file://src/codepipeline_cfn.json \
+				--template-body file://src/<project_path>/deployment/codepipeline_cfn.json \
 				--stack-name my-cfn-code-pipeline \
 				--capabilities CAPABILITY_NAMED_IAM \
 				--tags Key=project,Value=cloudformation_pipeline_demo
